Some improvements to the review

--- a/Client-Side-Scripting/Review/index.html
+++ b/Client-Side-Scripting/Review/index.html
@@ -9,6 +9,8 @@
       <div>
         <h3 id="question">How are you doing today?</h3>
       </div>
+      <input id="inputField" type="text" />
+      <button onclick="answer()">Answer</button> 
     </div>
     <script src="index.js"></script>
   </body>
